unpackaged/main/default/objects/KMI_SMS_Loop_Tracker__c/KMI_SMS_Loop_Tracker__c.object-meta.xml
<CustomObject>
    <description>This object hold a record for each SA KMI SMS notification, will use this to trigger a schedule flow to send a SMS</description>
    <label>KMI SMS Loop Tracker</label>
    <nameField>
        <displayFormat>Tracker-{0}</displayFormat>
        <label>KMI SMS Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KMI SMS Loop Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>