unpackaged/main/default/objects/KMI_SMS_Loop_Tracker__c/fields/Expired_SMS_Notification__c.field-meta.xml
<CustomField>
    <fullName>Expired_SMS_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired SMS Notification</label>
    <type>Checkbox</type>
</CustomField>