unpackaged/main/default/objects/KMI_SMS_Loop_Tracker__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>KMI SMS Loop Tracker</relationshipLabel>
    <relationshipName>KMI_SMS_Loop_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>