unpackaged/main/default/objects/KMI_SMS_Loop_Tracker__c/fields/SMS_Loop_Flag__c.field-meta.xml
<CustomField>
    <fullName>SMS_Loop_Flag__c</fullName>
    <formula>$Setup.KMI_SMS_Loop_Settings__c.Enable_KMI_SMS_Loop_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Loop Flag</label>
    <type>Checkbox</type>
</CustomField>